Fixes the permanent border of the website (#3)
There always was a permanent scrollbar visible on the page. The reason behind that was that the "height: 100%;" rule of the body actually makes a bigger than 100% because, by default, browsers add a 8px margin to all sides of a page.

Also removing potential paddings.

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ body {
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 #text {
